syntax = "proto3";
package basegate;
message sessionImp {
    string IP = 1;
    string Network = 2;
    string UserId = 3;
    string SessionId = 4;
    string ServerId = 5;
    string TraceId = 6;
    string SpanId = 7;
    map<string, string> Settings = 8;
    map<string, string> Carrier=9;
}